--- a/TestExcel/Views/Data/Section.cshtml
+++ b/TestExcel/Views/Data/Section.cshtml
@@ -137,17 +137,29 @@
                             <label>เวลาเริ่มเรียน</label>
                             <select class="w3-select w3-border w3-margin-bottom" id="SECTION_TIME_START" name="SECTION_TIME_START">
                                 <option value="8">08:00</option>
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
                             </select>
                         </div>
@@ -155,18 +167,31 @@
                             <label>เวลาหมดคาบเรียน</label>
                             <select class="w3-select w3-border w3-margin-bottom" id="SECTION_TIME_END" name="SECTION_TIME_END">
                                 <option value="8">08:00</option>
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
+                                <option value="20.3">20:30</option>
                                 <option value="21">21:00</option>
                             </select>
                         </div>
