--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -267,35 +267,60 @@
                         <td colspan="3" style="padding-right:2px">
                             <select class="form-control" id="FIRST_SAVE_TIMESTART" name="FIRST_SAVE_TIMESTART" style="width:6em">
                                 <option value="8">08:00</option>
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
                             </select>
                         </td>
                         <td align="center"><b>-&nbsp;</b></td>
                         <td colspan="3" style="padding-right:1em">
                             <select class="form-control" id="FIRST_SAVE_TIMEEND" name="FIRST_SAVE_TIMEEND" style="width:6em">
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
+                                <option value="20.3">20:30</option>
                                 <option value="21">21:00</option>
                             </select>
                         </td>
@@ -344,35 +369,60 @@
                         <td colspan="3" style="padding-right:2px">
                             <select class="form-control" id="SECOND_SAVE_TIMESTART" name="SECOND_SAVE_TIMESTART" style="width:6em">
                                 <option value="8">08:00</option>
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
                             </select>
                         </td>
                         <td align="center"><b>-&nbsp;</b></td>
                         <td colspan="3" style="padding-right:1em">
                             <select class="form-control" id="SECOND_SAVE_TIMEEND" name="SECOND_SAVE_TIMEEND" style="width:6em">
+                                <option value="8.3">08:30</option>
                                 <option value="9">09:00</option>
+                                <option value="9.3">09:30</option>
                                 <option value="10">10:00</option>
+                                <option value="10.3">10:30</option>
                                 <option value="11">11:00</option>
+                                <option value="11.3">11:30</option>
                                 <option value="12">12:00</option>
+                                <option value="12.3">12:30</option>
                                 <option value="13">13:00</option>
+                                <option value="13.3">13:30</option>
                                 <option value="14">14:00</option>
+                                <option value="14.3">14:30</option>
                                 <option value="15">15:00</option>
+                                <option value="15.3">15:30</option>
                                 <option value="16">16:00</option>
+                                <option value="16.3">16:30</option>
                                 <option value="17">17:00</option>
+                                <option value="17.3">17:30</option>
                                 <option value="18">18:00</option>
+                                <option value="18.3">18:30</option>
                                 <option value="19">19:00</option>
+                                <option value="19.3">19:30</option>
                                 <option value="20">20:00</option>
+                                <option value="20.3">20:30</option>
                                 <option value="21">21:00</option>
                             </select>
                         </td>
