--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -228,7 +228,7 @@
                         <div class="w3-container">
                             <div class="w3-container">
                                 <label class="w3-margin-top">ภาควิชา</label>
-                                <select class="w3-select w3-border" id="department" name="department">
+                                <select class="w3-select w3-border w3-margin-bottom" id="department" name="department">
                                     @foreach (var item in Model)
                                     {
                                         <option value="@item.DEPARTMENT_ID">@item.DEPARTMENT_NAME</option>
