--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
     string Message = ViewBag.Message;
     string ErrorMessage = ViewBag.ErrorMessage;
-
+    var DATE = ViewBag.DATE;
 }
 <style>
     .image-preview-input {
@@ -157,20 +157,20 @@
                         @*@using (Html.BeginForm("Export", "Report", FormMethod.Post, new { @class = "form-horizontal", target = "_blank" }))*@
                         @using (Html.BeginForm("Export", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
                         {
-                            <div class="w3-container">
-                                <label>ภาคการศึกษา</label>
-                                <select class="w3-select w3-border w3-margin-bottom semester" id="semester" name="semester">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                </select>
-                                <label>ปีการศึกษา</label>
-                                @Html.DropDownList("year_export", (SelectList)ViewBag.ddl_Year, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
-                                <hr>
-                                <div class="w3-center" style="margin-top:50px">
-                                    <input type="submit" value="DOWNLOAD" class="w3-btn w3-green w3-margin-bottom">
-                                </div>
+                        <div class="w3-container">
+                            <label>ไฟล์</label>
+                            <select class="w3-select w3-border" id="date" name="date" style="margin-bottom:110px">
+                                @foreach (var item in DATE)
+                                {
+                                    string daymonthyear = item.DAY + "-" + item.MONTH + "-" + item.YEAR;
+                                    <option value="@item.EXCEL_DATE">@item.EXCEL_DATE</option>
+                                }
+                            </select>
+                            <hr>
+                            <div class="w3-center" style="margin-top:10px">
+                                <input type="submit" value="DOWNLOAD" class="w3-btn w3-green w3-margin-bottom">
                             </div>
+                        </div>
                         }
                     </div>
                 </div>
